@startuml
'https://plantuml.com/class-diagram

class playingField
class keyInput
class keyListener
class BallGuidesObject
class FlippperObject
class LightShieldObject
class PlungerObject
class bouncyCylindersObject

playingField -- Parameters

keyInput <|-- keyListener

playingField o-- FlippperObject

playingField o-- PlungerObject

playingField o-- BallGuidesObject

playingField o-- LightShieldObject

playingField o-- bouncyCylindersObject

enum Parameters {
 BallSize
 BorderHeight
 BorderWidth
 HalfBorderWidth
 Height
 Width
 PlungerWidth
 }

@enduml
